--- a/meta/main.yml
+++ b/meta/main.yml
@@ -26,6 +26,9 @@ galaxy_info:
     - name: Fedora
       versions:
         - all
+    - name: Gentoo
+      versions:
+        - all
     - name: Ubuntu
       versions:
         - bionic
