--- a/tasks/hosts.yml
+++ b/tasks/hosts.yml
@@ -1,4 +1,7 @@
 ---
+- name: Hosts - Load variables
+  ansible.builtin.include_vars: hosts.yml
+
 - name: Hosts - Local host
   become: true
   ansible.builtin.hostname:
