--- a/vars/hosts.yml
+++ b/vars/hosts.yml
@@ -6,7 +6,7 @@ system_hosts_localhosts: |
     map('join')
   }}
 
-system_loopback_hosts:
+system_hosts_loopback:
   - ip: "127.0.0.1"
     names: ['localhost']
   - ip: "127.0.1.1"
@@ -14,4 +14,4 @@ system_loopback_hosts:
   - ip: "::1"
     names: "{{ ['localhost', 'ip6-localhost', 'ip6-loopback'] + system_hosts_localhosts }}"
 
-system_hosts: "{{ system_loopback_hosts + system_hosts_custom }}"
+system_hosts: "{{ system_hosts_loopback + system_hosts_custom }}"
