--- a/molecule/servers/converge.yml
+++ b/molecule/servers/converge.yml
@@ -6,6 +6,44 @@
       ansible.builtin.include_role:
         name: gwerlas.system
       vars:
+        system_sudo_group: gods
+        system_sudo_defaults:
+          - "!visiblepw"
+          - always_set_home
+          - match_group_by_gid
+          - always_query_group_plugin
+          - env_reset
+          - env_keep:
+              - COLORS
+              - DISPLAY
+              - HOSTNAME
+              - HISTSIZE
+              - KDEDIR
+              - LS_COLORS
+              - MAIL
+              - PS1
+              - PS2
+              - QTDIR
+              - USERNAME
+              - LANG
+              - LC_ADDRESS
+              - LC_CTYPE
+              - LC_COLLATE
+              - LC_IDENTIFICATION
+              - LC_MEASUREMENT
+              - LC_MESSAGES
+              - LC_MONETARY
+              - LC_NAME
+              - LC_NUMERIC
+              - LC_PAPER
+              - LC_TELEPHONE
+              - LC_TIME
+              - LC_ALL
+              - LANGUAGE
+              - LINGUAS
+              - _XKB_CHARSET
+              - XAUTHORITY
+          - secure_path: /sbin:/bin:/usr/sbin:/usr/bin
         system_hosts_domain: mydomain.tld
         system_hosts_localhost_aliases:
           - me
@@ -15,12 +53,14 @@
             names:
               - host7
               - host7.domain.tld
+        system_users_admin_group: administrators
         system_users:
           - name: jane
             comment: System administrator
-            group: "{{ 'adm' if ansible_os_family == 'Debian' else 'wheel' }}"
+            group: "{{ system_users_admin_group }}"
             groups:
-              - users
+              - "{{ system_sudo_group }}"
+              - my_team
             shell: /bin/zsh
           - name: john
             group: users
