--- a/tasks/proxies.yml
+++ b/tasks/proxies.yml
@@ -1,4 +1,12 @@
 ---
+- name: Proxies - sudoers
+  become: true
+  ansible.builtin.template:
+    src: sudoers.d/50-proxy.j2
+    dest: /etc/sudoers.d/50-proxy
+    mode: 0440
+    validate: visudo -cf %s
+
 - name: Proxies - Environment variables
   become: true
   ansible.builtin.lineinfile:
