--- a/molecule/servers/converge.yml
+++ b/molecule/servers/converge.yml
@@ -66,5 +66,5 @@
             group: users
         system_users_groups:
           - name: my_company
-        system_packages_update: true
+        system_packages_upgrade: true
         system_portage_directory: /data/gentoo
