--- a/tasks/package-managers/portage-pre.yml
+++ b/tasks/package-managers/portage-pre.yml
@@ -26,6 +26,7 @@
         regex: ^PORTDIR=
         group: portage
         mode: 0664
+      notify: cache update
 
     - name: Portage - Cache - Predefined Portage directory
       ansible.builtin.set_fact:
