--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -5,8 +5,18 @@
 - name: OpenRC
   ansible.builtin.import_tasks: openrc.yml
 
+- name: Package manager update cache
+  listen: cache update
+  become: true
+  ansible.builtin.package:
+    sync: "{{ (ansible_pkg_mgr == 'portage') | ternary(true, omit) }}"
+    update_cache: "{{ (ansible_pkg_mgr != 'portage') | ternary(true, omit) }}"
+  register: result
+  until: result.failed == false
+  retries: 5
+
 - name: Package manager update marker
-  listen: mark update
+  listen: cache update
   when: system_packages_update_policy.marker is defined
   become: true
   ansible.builtin.file:
