--- a/molecule/stream/molecule.yml
+++ b/molecule/stream/molecule.yml
@@ -6,8 +6,8 @@ driver:
   provider:
     name: libvirt
 platforms:
-  - name: debian10
-    box: debian/buster64
+  - name: archlinux
+    box: archlinux/archlinux
     provider_raw_config_args: &raw_config
       - "cpu_mode = 'host-passthrough'"
       - "disk_bus = 'virtio'"
@@ -15,35 +15,27 @@ platforms:
       - "video_type = 'virtio'"
       - "disk_driver :cache => 'writeback'"
       - "storage :file, bus: 'virtio', cache: 'writeback'"
-  - name: debian11
-    box: debian/bullseye64
-    provider_raw_config_args: *raw_config
-  - name: el7
-    box: centos/7
+  - name: debian12
+    box: debian/testing64
     provider_raw_config_args: *raw_config
   - name: el8
-    box: almalinux/8
+    box: generic/centos8s
     memory: 2048
     provider_raw_config_args: *raw_config
   - name: el9
-    box: almalinux/9
+    box: generic/centos9s
     memory: 2048
     provider_raw_config_args: *raw_config
-  - name: ubuntu1804
-    box: generic/ubuntu1804
-    provider_raw_config_args: *raw_config
-  - name: ubuntu2004
-    box: generic/ubuntu2004
-    memory: 2048
-    provider_raw_config_args: *raw_config
-  - name: ubuntu2204
-    box: generic/ubuntu2204
-    memory: 4096
-    provider_raw_config_args: *raw_config
-  # - name: ubuntu2210
-  #   box: generic/ubuntu2210
-  #   memory: 2048
-  #   provider_raw_config_args: *raw_config
+  - name: gentoo
+    box: generic/gentoo
+    cpus: 4
+    memory: 8192
+    provider_raw_config_args:
+      - "cpu_mode = 'host-passthrough'"
+      - "nic_model_type = 'virtio'"
+      - "video_type = 'virtio'"
+      - "disk_driver :cache => 'writeback'"
+      - "storage :file, bus: 'virtio', cache: 'writeback'"
 lint: ansible-lint
 provisioner:
   name: ansible
