--- a/tasks/sudo.yml
+++ b/tasks/sudo.yml
@@ -1,22 +1,30 @@
 ---
 - name: Sudo - Group
+  tags:
+    - sudoers
   become: true
   ansible.builtin.group:
     name: "{{ system_sudo_group }}"
     state: present
 
 - name: Sudo - Get version
+  tags:
+    - sudoers
   ansible.builtin.command:
     cmd: sudo --version
   register: result
   changed_when: false
 
 - name: Sudo - Store version
+  tags:
+    - sudoers
   ansible.builtin.set_fact:
     cacheable: true
     system_sudo_version: "{{ result.stdout_lines | first | split(' ') | last }}"
 
 - name: Sudo - Config directory
+  tags:
+    - sudoers
   become: true
   ansible.builtin.file:
     path: /etc/sudoers.d
@@ -24,6 +32,8 @@
     mode: 0750
 
 - name: Sudo - Config file
+  tags:
+    - sudoers
   become: true
   ansible.builtin.template:
     src: sudoers.j2
