--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,6 +3,7 @@
 system_manage_sudo: "{{ 'container' not in ansible_virtualization_tech_guest }}"
 system_manage_hosts: "{{ 'container' not in ansible_virtualization_tech_guest }}"
 system_manage_proxies: "{{ system_http_proxy is defined or system_https_proxy is defined or system_ftp_proxy is defined }}"
+system_manage_time: "{{ 'container' not in ansible_virtualization_tech_guest }}"
 system_manage_firewall: "{{ 'container' not in ansible_virtualization_tech_guest }}"
 
 # Shared variables
