--- a/vars/packages/ubuntu.yml
+++ b/vars/packages/ubuntu.yml
@@ -1,28 +1,12 @@
 ---
+system_apt_default_mirror: http://us.archive.ubuntu.com
 system_apt_default_mirrors:
-  - url: http://us.archive.ubuntu.com/ubuntu
-    branch: "{{ ansible_distribution_release }}"
-    sections:
-      - main
-      - restricted
-      - universe
-      - multiverse
-  - url: http://us.archive.ubuntu.com/ubuntu
-    branch: "{{ ansible_distribution_release }}-updates"
-    sections:
-      - main
-      - restricted
-      - universe
-      - multiverse
-  - url: http://us.archive.ubuntu.com/ubuntu
-    branch: "{{ ansible_distribution_release }}-backports"
-    sections:
-      - main
-      - restricted
-      - universe
-      - multiverse
-  - url: http://us.archive.ubuntu.com/ubuntu
-    branch: "{{ ansible_distribution_release }}-security"
+  - url: "{{ system_apt_mirror | default(system_apt_default_mirror) }}/ubuntu"
+    branches:
+      - "{{ ansible_distribution_release }}"
+      - "{{ ansible_distribution_release }}-updates"
+      - "{{ ansible_distribution_release }}-backports"
+      - "{{ ansible_distribution_release }}-security"
     sections:
       - main
       - restricted
