--- a/tasks/proxies.yml
+++ b/tasks/proxies.yml
@@ -9,6 +9,8 @@
     dest: /etc/sudoers.d/50-proxy
     mode: 0440
     validate: visudo -cf %s
+  environment:
+    PATH: /sbin:/usr/sbin:/usr/local/sbin
 
 - name: Proxies - Environment variables
   tags:
