--- a/tasks/package-managers/apt-pre.yml
+++ b/tasks/package-managers/apt-pre.yml
@@ -7,3 +7,11 @@
     dest: /etc/apt/sources.list
     mode: 0644
   notify: cache update
+
+- name: APT - Unattended upgrade
+  when: system_packages_upgrade_unattended
+  become: true
+  ansible.builtin.template:
+    src: apt/apt.conf.d/20auto-upgrades.j2
+    dest: /etc/apt/apt.conf.d/20auto-upgrades
+    mode: 0644
