Compute the package list

--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -12,3 +12,5 @@
       ansible.builtin.command:
         cmd: zsh --version
       changed_when: false
+      register: result
+      failed_when: result.rc == 0
