--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,4 +1,5 @@
 ---
+# Hosts
 system_hosts_localhosts: |
   {{
     ( [system_hosts_localhost] + system_hosts_localhost_aliases ) |
@@ -15,3 +16,19 @@ system_hosts_loopback:
     names: "{{ ['localhost', 'ip6-localhost', 'ip6-loopback'] + system_hosts_localhosts }}"
 
 system_hosts: "{{ system_hosts_loopback + system_hosts_custom }}"
+
+# Packages
+system_packages:
+  ca_certificates: ca-certificates
+  common:
+    - rsync
+  desktop:
+    - usbutils
+
+system_packages_computed: |
+  {{
+    system_packages.common
+    + (system_users | selectattr('shell', 'defined') | map(attribute='shell') | map('basename') | sort | unique)
+    + (system_packages[system_profile] | default([]))
+    + (system_ca_certificates | length > 0) | ternary([system_packages.ca_certificates], [])
+  }}
