--- a/vars/main.yml
+++ b/vars/main.yml
@@ -28,7 +28,12 @@ system_packages:
 system_packages_computed: |
   {{
     system_packages.common
-    + (system_users | selectattr('shell', 'defined') | map(attribute='shell') | map('basename') | sort | unique)
+    + (system_users | selectattr('shell', 'defined') | rejectattr('system', '==', true) | map(attribute='shell') | map('basename') | sort | unique)
     + (system_packages[system_profile] | default([]))
     + (system_ca_certificates | length > 0) | ternary([system_packages.ca_certificates], [])
   }}
+
+# SSL
+system_ca:
+  path: /usr/local/share/ca-certificates
+  command: update-ca-certificates
