--- a/tasks/packages.yml
+++ b/tasks/packages.yml
@@ -32,23 +32,13 @@
       paths:
         - package-managers
 
-- name: Packages - Cache update detection script
-  become: true
-  ansible.builtin.template:
-    src: needs-update.j2
-    dest: "{{ system_bin_path }}/needs-update"
-    mode: 0755
+- name: Packages - update
+  ansible.builtin.import_tasks: packages/update.yml
 
-- name: Packages - Cache update detection
-  ansible.builtin.command:
-    cmd: needs-update
-  register: result
-  failed_when: result.rc > 1
-  changed_when: result.rc == 1
-  notify: cache update
-
-- name: Packages - Cache update
-  ansible.builtin.meta: flush_handlers
+- name: Packages - list for debug
+  ansible.builtin.debug:
+    var: system_packages_computed
+    verbosity: 1
 
 - name: Packages - Base system tools
   become: true
@@ -58,7 +48,7 @@
   until: result.failed == false
   retries: "{{ system_retries }}"
 
-- name: Packages - Update
+- name: Packages - Upgrade
   when:
     - system_packages_upgrade
     - system_packages_upgrade_policy is defined
