--- a/tasks/package-managers/apt-pre.yml
+++ b/tasks/package-managers/apt-pre.yml
@@ -1,17 +1,18 @@
 ---
-- name: APT - Sources list
-  when: system_apt_mirrors is defined or system_apt_default_mirrors is defined
+- name: APT - Configuration files
   become: true
-  ansible.builtin.template:
-    src: apt/sources.list.j2
-    dest: /etc/apt/sources.list
-    mode: 0644
-  notify: cache update
+  block:
+    - name: APT - Sources list
+      when: system_apt_mirrors is defined or system_apt_default_mirrors is defined
+      ansible.builtin.template:
+        src: apt/sources.list.j2
+        dest: /etc/apt/sources.list
+        mode: 0644
+      notify: cache update
 
-- name: APT - Unattended upgrade
-  when: system_packages_upgrade_unattended
-  become: true
-  ansible.builtin.template:
-    src: apt/apt.conf.d/20auto-upgrades.j2
-    dest: /etc/apt/apt.conf.d/20auto-upgrades
-    mode: 0644
+    - name: APT - Unattended upgrade
+      when: system_packages_upgrade_unattended
+      ansible.builtin.template:
+        src: apt/apt.conf.d/20auto-upgrades.j2
+        dest: /etc/apt/apt.conf.d/20auto-upgrades
+        mode: 0644
