--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -24,6 +24,7 @@ system_hosts_custom: []
 system_users_admin_group: "{{ 'adm' if ansible_os_family == 'Debian' else 'wheel' }}"
 system_users_groups: []
 system_users: []
+system_users_keys: []
 
 # Package management
 system_packages_upgrade: false
