--- a/molecule/servers/converge.yml
+++ b/molecule/servers/converge.yml
@@ -74,3 +74,5 @@
         system_users_keys:
           - user: jane
             key: ssh-rsa AAAA test
+        system_packages_custom:
+          - wget
