--- a/meta/argument_specs.yml
+++ b/meta/argument_specs.yml
@@ -41,6 +41,11 @@ argument_specs:
       system_bin_path:
         default: /usr/local/bin
         description: Path location for our scripts
+      system_packages_custom:
+        type: list
+        elements: str
+        default: "[]"
+        description: List of static packages names to install on the node.
       system_packages_cache_age:
         type: int
         default: 7
