--- a/tasks/packages.yml
+++ b/tasks/packages.yml
@@ -32,8 +32,28 @@
       paths:
         - package-managers
 
-- name: Packages - update
+- name: Packages - Update
   ansible.builtin.import_tasks: packages/update.yml
+
+- name: Packages - Compute the list
+  ansible.builtin.set_fact:
+    cacheable: true
+    system_packages_computed: |
+      {{
+        ( system_packages_custom
+        + system_packages.common
+        + ( system_users |
+            rejectattr('system', 'defined') |
+            selectattr('shell', 'defined') |
+            map(attribute='shell') |
+            map('basename') |
+            sort |
+            unique)
+        + (system_packages[system_profile] | default([]))
+        + (system_packages_upgrade_unattended | ternary(system_packages_unattended_upgrades | default([]), []))
+        + (system_ca_certificates | length > 0) | ternary([system_packages.ca_certificates], [])
+        ) | sort | unique
+      }}
 
 - name: Packages - list for debug
   ansible.builtin.debug:
