--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,10 +3,12 @@ molecule:
   services:
     - docker:20.10-dind
   script: molecule test
+  rules:
+    - if: '$CI_COMMIT_REF_PROTECTED == "true"'
 
 import:
   stage: deploy
   image: gwerlas/ansible
   script: ansible-galaxy role import --token $GALAXY_TOKEN Gwerlas system
   rules:
-    - if: '$CI_COMMIT_REF_PROTECTED == "true"'
+    - if: $CI_COMMIT_TAG
