--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,11 +4,20 @@ molecule:
     - docker:20.10-dind
   script: molecule test
   rules:
-    - if: '$CI_COMMIT_REF_PROTECTED == "true"'
+    - if: $CI_COMMIT_BRANCH
+      changes:
+      - defaults/*
+      - files/**/*
+      - handlers/*
+      - meta/*
+      - molecule/**/*
+      - tasks/**/*
+      - templates/**/*
+      - vars/**/*
 
 import:
   stage: deploy
   image: gwerlas/ansible
   script: ansible-galaxy role import --token $GALAXY_TOKEN Gwerlas system
   rules:
-    - if: $CI_COMMIT_TAG
+    - if: '$CI_COMMIT_REF_PROTECTED == "true" && $CI_COMMIT_TAG'
