--- a/meta/argument_specs.yml
+++ b/meta/argument_specs.yml
@@ -112,8 +112,22 @@ argument_specs:
         type: list
         elements: dict
         default: "[]"
-        description: List of system groups
+        description: List of system groups.
       system_users_admin_group:
         type: str
         default: "'adm' for Debian like distros, 'wheel' otherwise"
         description: Name of the admin group.
+
+  zsh:
+    short_description: ZSH configuration.
+    options:
+      system_zsh_files:
+        type: list
+        elements: str
+        default: "[]"
+        description: List of raw files to copy in `/etc/skel`.
+      system_zsh_templates:
+        type: list
+        elements: str
+        default: "[]"
+        description: List of templated files to copy in `/etc/skel`.
